# ResearchTree

./: .gitignore  AGENTS.md  TODO.md  USER_MANUAL.md  apply_guest_patch.ps1  create_guest_patch.ps1
backend/: pyproject.toml  research_tree.db
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  bookmark.py  item.py  item_edge.py  tag.py
backend/app/routes/: __init__.py  bookmarks.py  item_edges.py  items.py  search.py  tags.py  upload.py
backend/app/schemas/: __init__.py  bookmark.py  item.py  item_edge.py  tag.py
backend/app/services/: db_helpers.py
backend/research_tree_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/GraphView/: GraphSplitter.tsx  ItemGraph.tsx
frontend/src/components/NodePanel/: AddItemDialog.tsx  BookmarkList.tsx  LatexView.tsx  ProgressBar.tsx  ReadPane.tsx  ResourceDetail.tsx  ScratchPad.tsx  TagEditor.tsx  TitleDialog.tsx  WebView.tsx
frontend/src/components/PDFViewer/: APDF.tsx  ContextMenu.tsx  PDFContainer.tsx  SpawnDialog.tsx
frontend/src/components/Sidebar/: SearchBar.tsx
frontend/src/store/: useGraphStore.ts  useUIStore.ts
scripts/: start-all.ps1  start-backend.ps1  start-frontend.ps1  stop-all.ps1
